Adding more functionalities
added searching database and dropping record on button click
offline functionality with icon and searching database
some resources

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,1 +1,7 @@
-<RCC/>
+<!DOCTYPE RCC>
+<RCC version="1.0">
+    <qresource prefix="/">
+        <file>resources/offline.png</file>
+        <file>resources/online.png</file>
+    </qresource>
+</RCC>
